--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -23,3 +23,31 @@ jobs:
         uses: python-semantic-release/python-semantic-release@master
         with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
+  publish:
+    needs: bump-version
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+  
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.11'
+  
+      - name: Install poetry
+        run: |
+          pip install pipx
+          pipx install poetry
+          pipx inject poetry "poetry-dynamic-versioning[plugin]"
+  
+      - name: Install dependencies
+        run: |
+          poetry install
+
+      - name: Publish package to PyPI
+        run: |
+          poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
+          poetry publish --build
